// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompareCommits converters (convertServerDiffToClient) code blob diff should convert git code diff with deleted diff type 1`] = `
Object {
  "blob": Object {
    "category": "code",
    "data": Object {
      "data": Object {
        "branch": "development",
        "commitHash": "#hhh",
        "isDirty": undefined,
        "remoteRepoUrl": Object {
          "type": "github",
          "value": "git@github.com:VertaAI/modeldb.git",
        },
        "tag": "tag-2",
      },
      "type": "git",
    },
  },
  "category": "code",
  "diffType": "deleted",
  "location": Array [
    "deleted",
  ],
  "type": "git",
}
`;

exports[`CompareCommits converters (convertServerDiffToClient) code blob diff should convert git code diff with modified diff type 1`] = `
Object {
  "blobA": Object {
    "category": "code",
    "data": Object {
      "data": Object {
        "branch": "master",
        "commitHash": "#hhh",
        "isDirty": true,
        "remoteRepoUrl": Object {
          "type": "github",
          "value": "git@github.com:VertaAI/modeldb.git",
        },
        "tag": "tag",
      },
      "type": "git",
    },
  },
  "blobB": Object {
    "category": "code",
    "data": Object {
      "data": Object {
        "branch": "development",
        "commitHash": "#hhh",
        "isDirty": undefined,
        "remoteRepoUrl": Object {
          "type": "github",
          "value": "git@github.com:VertaAI/modeldb.git",
        },
        "tag": "tag-2",
      },
      "type": "git",
    },
  },
  "category": "code",
  "diffType": "updated",
  "location": Array [
    "folder_asdfc",
    "repo_blob",
  ],
  "type": "git",
}
`;
